[package]
name = "exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
winnow="=0.4.1"
spl-math = "0.2.0"

[dev-dependencies]
anchor-client = { version="0.28.0", features = ["debug", "async"] }
solana-program-test = "1.16.10"